# bvs

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  pipeline.jsonc
CMakeModules/: BvsvcTester.cmake.in  BvsvcTesterBuild.cmake.in
compile_profiles/: bvsvc-config.cmake.in
core/: CMakeLists.txt
core/bvs-blocklog/: CMakeLists.txt  main.cpp
core/bvsc/: CLI11.hpp  CMakeLists.txt  bvsc.pot  config.hpp.in  help_text.cpp  help_text.hpp  httpc.cpp  httpc.hpp  localize.hpp  main.cpp
core/bvsio-launcher/: CMakeLists.txt  config.hpp.in  main.cpp
core/kbvd/: CMakeLists.txt  config.hpp.in  main.cpp
core/nodeos/: CMakeLists.txt  config.hpp.in  main.cpp
libraries/: CMakeLists.txt
libraries/builtins/: CMakeLists.txt
libraries/chain/: abi_serializer.cpp  asset.cpp  block_header.cpp  block_log.cpp  block_state.cpp  genesis_state_root_key.cpp.in  name.cpp  snapshot.cpp  transaction_context.cpp  transaction_metadata.cpp
libraries/testing/: tester.cpp
libs/chain/: CMakeLists.txt  apply_context.cpp  (+17 more)
plugins/: COMMUNITY.md  bvsio-make_new_plugin.sh
ut/: CMakeLists.txt  abi_tests.cpp  api_tests.cpp  auth_tests.cpp  block_tests.cpp  block_timestamp_tests.cpp  bootseq_tests.cpp  bvsvc.token_tests.cpp  bvsvc_system_tester.hpp  contracts.hpp.in  currency_tests.cpp  database_tests.cpp  delay_tests.cpp  forked_tests.cpp  main.cpp  message_buffer_tests.cpp  misc_tests.cpp  payloadless_tests.cpp  producer_schedule_tests.cpp  ram_tests.cpp  resource_limits_test.cpp  snapshot_tests.cpp  special_accounts_tests.cpp  wasm_tests.cpp  whitelist_blacklist_tests.cpp
(+224 files in other folders)
